refacto: (wip) replace ground curvature by harmonoise implementation [skip ci]